<resources>
    <string name="app_name">WeFix Dealer</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_password">ReEnter Password</string>
    <string name="change">Change</string>
    <string name="we_fix_team">We Fix Team</string>
    <string name="show_password">Show Password</string>
    <string name="full_call_log_details">Full Call Log Details</string>
    <string name="status">Status</string>
    <string name="logo">Logo</string>
    <string name="welcome_to_nwefix">Welcome To\nWeFix</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="from">From</string>
    <string name="aahan_commercial_and_co">Aahan Commercial and co.</string>
    <string name="made_in_india">Made In India</string>
    <string name="image">image</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="problem">Problem</string>
    <string name="add_out_of_warranty_call_log">Add Out Of Warranty Call Log</string>
    <string name="category">Category</string>
    <string name="service">Service</string>
    <string name="problem_description">Problem Description</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="product_name">Product Name</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="open_logs">Open Logs</string>
    <string name="no_record">No Record</string>
    <string name="closed_logs">Closed Logs</string>
    <string name="add_in_warranty_call_log">Add In Warranty Call Log</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="serial_no">Serial No</string>
    <string name="model_no">Model No</string>
    <string name="tax_invoice">Tax Invoice</string>
    <string name="no_data">No Data</string>
    <string name="warranty_logs">Warranty Logs</string>
    <string name="log_id">Log ID#</string>
    <string name="log_placed">Log Placed</string>
    <string name="loading">Loading…</string>
    <string name="upload_tax_invoice">upload Tax Invoice</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="work_type">Work Type</string>
    <string name="customer_details">Customer Details</string>
    <string name="log_details">Log Details</string>
    <string name="problem_ndescription">Problem\ndescription</string>
    <string name="phone_nnumber">Phone\nNumber</string>
    <string name="payment_details">Payment Details</string>
    <string name="all_logs">All Logs</string>
    <string name="total_logs">Total Logs:-</string>
    <string name="only_visit">Only Visit:-</string>
    <string name="total_complete_pay_call_logs">Total Complete Pay Call Logs:-</string>
    <string name="paid_call_logs">Paid Call Logs:-</string>
    <string name="due_call_logs">Due Call Logs:-</string>
    <string name="payment_date">Payment Date</string>
    <string name="payment_id">Payment ID</string>
    <string name="dealer_name">Dealer Name:</string>
    <string name="naration">Naration</string>
    <string name="no_of_all">No Of All:</string>
    <string name="amount">Amount:</string>
</resources>