<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".fragments.InWarrantyFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/add_in_warranty_call_log"
                android:textColor="#0640e0"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/customer_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Name"
                android:background="@drawable/custom_edit_text1"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/customer_address"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Address"
                android:background="@drawable/custom_edit_text1"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pin_code"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/zip_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Pin Code"
                android:background="@drawable/custom_edit_text1"
                android:gravity="center_vertical"
                android:hint="@string/pin_code"
                android:inputType="number"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Number"
                android:background="@drawable/custom_edit_text1"
                android:gravity="center_vertical"
                android:hint="@string/number"
                android:inputType="phone"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Email"
                android:background="@drawable/custom_edit_text1"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/product_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Product Name"
                android:background="@drawable/custom_edit_text1"
                android:gravity="center_vertical"
                android:hint="@string/product_name"
                android:inputType="textEmailAddress"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/purchase_date"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/purchase"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Purchase Dtae"
                android:background="@drawable/custom_spinner"
                android:gravity="center_vertical"
                android:hint="@string/yyyy_mm_dd"
                android:inputType="date"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/model_no"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Model No"
                android:hint="@string/model_no"
                android:background="@drawable/custom_spinner"
                android:gravity="center_vertical"
                android:padding="7dp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/serial_no"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/serial"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Serial No"
                android:background="@drawable/custom_spinner"
                android:gravity="center_vertical"
                android:hint="@string/serial_no"
                android:inputType="text"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/company"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_spinner"
                android:padding="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/problem_description"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/problem_des"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="@string/problem_description"
                android:background="@drawable/custom_edit_text1"
                android:gravity="center_vertical"
                android:hint="@string/problem_description"
                android:inputType="text"
                android:padding="7dp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/tax_invoice" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <Button
                    android:id="@+id/upload_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/custom_btn"
                    android:padding="5dp"
                    android:text="@string/upload_tax_invoice"
                    android:textColor="#fff"
                    tools:ignore="RelativeOverlap" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/custom_btn"
                    android:padding="5dp"
                    android:text="@string/cancel"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/custom_btn"
                    android:padding="5dp"
                    android:text="@string/upload"
                    android:textColor="#fff"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <Button
                android:id="@+id/add"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_btn"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="#fff" />

        </LinearLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>