<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/welcome_to_nwefix"
            android:textColor="#0640e0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="8dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_textview"
                    android:fontFamily="sans-serif-condensed-light"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#0640e0"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints="Email"
                    android:background="@drawable/custom_edit_text"
                    android:drawableStart="@drawable/username_asset"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="Password"
                        android:background="@drawable/custom_edit_text"
                        android:drawableStart="@drawable/password_asset"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                    <ImageView
                        android:id="@+id/pass_btn"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="22.5dp"
                        android:layout_marginEnd="15dp"
                        android:alpha=".5"
                        android:contentDescription="@string/show_password"
                        android:onClick="ShowHidePass"
                        android:src="@drawable/password_visible_asset" />

                </RelativeLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/custom_btn"
                    android:text="@string/login"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="#0640e0" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>