<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0640e0"
            app:title="Change Password"
            app:titleTextColor="#fff" />

        <TextView
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="#0640e0"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/abc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/c"
            android:layout_margin="20dp"
            android:elevation="8dp"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="60dp">

                <EditText
                    android:id="@+id/current_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="Password"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <ImageView
                    android:id="@+id/curr_pass_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:alpha=".5"
                    android:contentDescription="@string/show_password"
                    android:elevation="8dp"
                    android:onClick="ShowHidePass"
                    android:src="@drawable/password_visible_asset" />

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/current_password"
                    android:layout_marginTop="10dp"
                    android:autofillHints="New Password"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <ImageView
                    android:id="@+id/new_pass_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@+id/current_password"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:alpha=".5"
                    android:contentDescription="@string/show_password"
                    android:onClick="ShowHidePass2"
                    android:src="@drawable/password_visible_asset" />

                <EditText
                    android:id="@+id/r_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/new_password"
                    android:layout_marginTop="10dp"
                    android:autofillHints="ReEnter Password"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/reenter_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <ImageView
                    android:id="@+id/re_pass_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@+id/new_password"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:alpha=".5"
                    android:contentDescription="@string/show_password"
                    android:onClick="ShowHidePass3"
                    android:src="@drawable/password_visible_asset" />

                <Button
                    android:id="@+id/change"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/r_password"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_btn"
                    android:text="@string/change"
                    android:textColor="#fff" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/we_fix_team"
            android:textColor="#000"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>